--- a/server/plugins/Terraria/Data/buff.yml
+++ b/server/plugins/Terraria/Data/buff.yml
@@ -806,14 +806,14 @@ effects:
   暴君之怒:
     isBuff: true
     attributes:
-        damageMeleeMulti: 0.3
-        critMelee: 10
-    tooltip: 增加30%近战伤害和10%近战暴击率
+        damageMeleeMulti: 0.05
+        critMelee: 5
+    tooltip: 增加5%近战伤害和暴击率
   格拉克斯之助:
     isBuff: true
     attributes:
         defence: 60
-        damageMeleeMulti: 0.2
+        damageMeleeMulti: 0.1
         critMelee: 10
     tooltip: 提高防御力，你的肌肉更加强壮
   狮心圣裁能量外壳:
