main inventory hints section tweak

--- a/server/plugins/DragonCore/Gui/inventory_regular.yml
+++ b/server/plugins/DragonCore/Gui/inventory_regular.yml
@@ -55,6 +55,7 @@ hint_texture:
   width: "方法.取屏幕宽度 * 250 / 方法.取变量('adjusted_scr_size')"
   height: "方法.取屏幕宽度 * 110 / 方法.取变量('adjusted_scr_size')"
   texture: "gui/hints_background.png"
+  alpha: 0.75
   actions:
     wheel: |-
       方法.执行方法(方法.到整数(方法.取滚轮值()) > 0 ? '提示向上' : '提示向下');
@@ -957,14 +958,14 @@ hints_details:
     - 自动挥舞：允许自动挥舞的物品在使用时自动开启。自动挥舞启用时，CD结束后将自动再次使用物品；可再次使用武器/工具以关闭自动挥舞
     - 另外，在聊天中输入 [i] 可以展示手上物品
   8:
-    name: NPC
+    name: NPC交易
     desc:
     - 主城处的NPC可以右键交互
     - 大部分NPC在条件允许后会开启商店功能；许多交易物品存在BOSS进度需求
     - 点击商店中的物品以购买，点击物品栏中的物品以出售
     - SHIFT+点击可以一次性出售/购买一整组物品
   9:
-    name: 合成
+    name: 物品合成
     desc:
     - 点击物品栏中的合成按钮可以查看无需合成站点的合成表
     - 与合成站点方块交互时可以开启相对应的合成窗口，显示当前可进行的合成
