--- a/server/plugins/Terraria/Data/armorSet.yml
+++ b/server/plugins/Terraria/Data/armorSet.yml
@@ -1064,13 +1064,13 @@ sets:
     lore:
     - ''
     - §a套装效果：
-    - §a额外增加15%魔法伤害和暴击率
+    - §a额外增加20%魔法伤害和暴击率
     - §a你可以按下套装增益键[默认为V]进入十秒钟的硫火狂暴模式
     - §a在此模式下，以快速的生命流失作为代价，你造成的魔法伤害会显著增加
     - §a硫火狂暴有30秒冷却时间
     attributes:
-      damageMagicMulti: 0.15
-      critMagic: 15
+      damageMagicMulti: 0.2
+      critMagic: 20
   日影套装:
     lore:
     - ''
@@ -1584,6 +1584,8 @@ sets:
   天钻套装:
     lore:
     - ''
+    - §a“§8这个世界是一个巨大的宝石箱……
+    - §r……里面装满了§#EBDCDF熠§#8B8F7B熠§e生§#8A7688辉§#544240的§r宝石§a”
     - §a套装效果：
     - §a你获得六个宝石碎片；其中五个对应五个职业，还有一颗基础宝石
     - §a受到伤害时，你会损失一个宝石
