underworld slime king bugfix
the attempt to spawn spike slime in underworld will now be successful

--- a/server/plugins/Terraria/Data/mobSpawning.yml
+++ b/server/plugins/Terraria/Data/mobSpawning.yml
@@ -2004,6 +2004,14 @@ mobInfo:
                     knockback: 2
                     knockbackResistance: 0.2
                     health: 300
+            underworld1:
+                attributes:
+                    damage: 84
+                    damageType: "Arrow"
+                    defence: 10
+                    knockback: 2
+                    knockbackResistance: 0.2
+                    health: 300
     水晶史莱姆:
         name: "水晶史莱姆"
         monsterType: "SLIME"
